--- a/locale/el/LC_MESSAGES/django.po
+++ b/locale/el/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-11-07 15:02+0200\n"
+"POT-Creation-Date: 2017-11-07 15:51+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -176,11 +176,15 @@ msgid "Send it!"
 msgstr "Αποστολή"
 
 #: .\main\templates\main\events.html:12
-msgid "Events at OK!Thess"
+#, fuzzy
+#| msgid "Events at OK!Thess"
+msgid "Meetups at OK!Thess"
 msgstr "Συναντήσεις στο ΟΚ!Τhess"
 
-#: .\main\templates\main\events.html:71 .\main\templates\main\layout.html:83
-msgid "Meetups"
+#: .\main\templates\main\events.html:71
+#, fuzzy
+#| msgid "Meetups"
+msgid "About meetups"
 msgstr "Συναντήσεις"
 
 #: .\main\templates\main\events.html:73
@@ -189,14 +193,22 @@ msgid ""
 "interest such as a programming language or entrepreneurship"
 msgstr ""
 
-#: .\main\templates\main\events.html:85
+#: .\main\templates\main\events.html:76
+#, fuzzy
+#| msgid "Hosted Teams"
+msgid "Hosted meetups"
+msgstr "Φιλοξενούμενες Ομάδες"
+
+#: .\main\templates\main\events.html:86
 msgid ""
 "The meetup of OK!Thess is the new thing in town. Click here to learn more"
 msgstr ""
 
-#: .\main\templates\main\events.html:88
-msgid "Past Events"
-msgstr ""
+#: .\main\templates\main\events.html:89
+#, fuzzy
+#| msgid "Hosted Teams"
+msgid "Past meetups"
+msgstr "Φιλοξενούμενες Ομάδες"
 
 #: .\main\templates\main\index.html:12
 msgid "Your early stage partner"
@@ -267,6 +279,10 @@ msgstr "Ομάδα"
 #: .\main\templates\main\layout.html:82
 msgid "Teams"
 msgstr "Ομάδες"
+
+#: .\main\templates\main\layout.html:83
+msgid "Meetups"
+msgstr "Συναντήσεις"
 
 #: .\main\templates\main\layout.html:84
 msgid "Blog"
