--- a/locale/el/LC_MESSAGES/django.po
+++ b/locale/el/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-11-12 15:09+0200\n"
+"POT-Creation-Date: 2017-11-12 15:28+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -238,7 +238,7 @@ msgstr ""
 "της πόλης.\n"
 
 #: .\main\templates\main\index.html:21
-msgid "Subscribe to get our updates."
+msgid "Subscribe to get our updates!"
 msgstr ""
 
 #: .\main\templates\main\index.html:50
